[tool.poetry]
name = "chartova"
version = "0.1.0"
description = ""
authors = ["Alexander <csmcgl@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.0,<3.13.0"
numpy = "^1.20.1"
pandas = "^1.3.2"
matplotlib = "^3.5.1"
celery = "^5.3.4"
requests = {extras = ["socks"], version = "^2.31.0"}
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.3.0"
redis = "^5.0.1"
dbus-python = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
